--- a/email.handlebars
+++ b/email.handlebars
@@ -7,9 +7,10 @@
 </head>
 <body>
 
+<h1>A Customer filled the form on Beauti website</h1>
 <p> {{text}}</p>
 <p>number: {{phoneNumber}}</p>
-<p>How did he reach Beauti: {{funnel}}</p>
-<p>Customer Type: {{firstTImeCustomer}}</p>
+<p>How did the customer reach Beauti: {{funnel}}</p>
+<p>Customer Type: {{firstTimeCustomer}}</p>
 </body>
 </html>
