fix email customer type

--- a/email.handlebars
+++ b/email.handlebars
@@ -11,6 +11,6 @@
 <p> {{text}}</p>
 <p>number: {{phoneNumber}}</p>
 <p>How did the customer reach Beauti: {{funnel}}</p>
-<p>Customer Type: {{firstTimeCustomer}}</p>
+<p>Customer Type: {{customerStatus}}</p>
 </body>
 </html>
