--- a/email.handlebars
+++ b/email.handlebars
@@ -10,6 +10,8 @@
 <h1>A Customer filled the form on Beauti website</h1>
 <p> {{text}}</p>
 <p>number: {{phoneNumber}}</p>
+<p>email: {{email}}</p>
+
 <p>How did the customer reach Beauti: {{funnel}}</p>
 <p>Customer Type: {{customerStatus}}</p>
 </body>
