--- a/email.handlebars
+++ b/email.handlebars
@@ -12,7 +12,7 @@
 <p>number: {{phoneNumber}}</p>
 <p>email: {{email}}</p>
 
-<p>How did the customer reach Beauti: {{funnel}}</p>
+<p>How did the customer reached Beauti: {{funnel}}</p>
 <p>Customer Type: {{customerStatus}}</p>
 </body>
 </html>
